# Simulator-NBA

./: CMakeLists.txt  README.md  main.cpp  tastatura.txt
data/seasons/: 1965-66.json  1971-72.json  1985-86.json  1990-91.json  1995-96.json  1997-98.json  1999-00.json  2007-08.json  2012-13.json  2015-16.json  2018-19.json  2020-21.json  2022-23.json
src/: Center.cpp  Center.h  Contract.cpp  Contract.h  Echipa.cpp  Echipa.h  Forward.cpp  Forward.h  Guard.cpp  Guard.h  Logouri.cpp  Logouri.h  Observatori.cpp  Observatori.h  Observer.h  Player.cpp  Player.h  Sezon.cpp  Sezon.h  SezonLoader.cpp  SezonSimulator.cpp  SezonSimulator.h  StatLeader.h  Stats.cpp  Stats.h  TwoWayPlayer.cpp  TwoWayPlayer.h
